bin/tests/snapshots/array_spacing__9f50c88dc0cc42922ef25feec047fcc9_fix.snap
---
source: bin/tests/array_spacing.rs
assertion_line: 7
---
{
  foo = 1;
  extraModulePackages = [ ];
  bar = 2;
}
---
