bin/tests/snapshots/array_spacing__9f50c88dc0cc42922ef25feec047fcc9_lint_errfmt.snap
---
source: bin/tests/array_spacing.rs
assertion_line: 7
---
{
  foo = 1;
  extraModulePackages = [ ];
  bar = 2;
}
---
<temp_file_path>>3:3:W:31:[attribute_ordering] `extraModulePackages` is out of alphabetical order
