bin/tests/snapshots/array_spacing__9f50c88dc0cc42922ef25feec047fcc9_lint_json.snap
---
source: bin/tests/array_spacing.rs
assertion_line: 7
---
{
  foo = 1;
  extraModulePackages = [ ];
  bar = 2;
}
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "attribute_ordering",
      "note": "Attributes are not in alphabetical order",
      "code": 31,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 3,
              "column": 3
            },
            "to": {
              "line": 3,
              "column": 29
            }
          },
          "message": "`extraModulePackages` is out of alphabetical order",
          "suggestion": null
        }
      ]
    }
  ]
}
