bin/tests/snapshots/array_spacing__a414b0b4faa854595737cafef65c522c_fix.snap
---
source: bin/tests/array_spacing.rs
assertion_line: 7
---
{
  foo = 1;

  kernelModules = [
    "a"
    "b"
  ];
  bar = 2;
}
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,9 +1,10 @@
 {
+  bar = 2;
+
   foo = 1;
 
   kernelModules = [
     "a"
     "b"
   ];
-  bar = 2;
 }
