bin/tests/snapshots/array_spacing__a414b0b4faa854595737cafef65c522c_lint_errfmt.snap
---
source: bin/tests/array_spacing.rs
assertion_line: 7
---
{
  foo = 1;

  kernelModules = [
    "a"
    "b"
  ];
  bar = 2;
}
---
<temp_file_path>>8:3:W:31:[attribute_ordering] `bar` is out of alphabetical order
<temp_file_path>>8:3:W:33:[array_spacing] a blank line should follow the multiline array above
