bin/tests/snapshots/array_spacing__a414b0b4faa854595737cafef65c522c_lint_json.snap
---
source: bin/tests/array_spacing.rs
assertion_line: 7
---
{
  foo = 1;

  kernelModules = [
    "a"
    "b"
  ];
  bar = 2;
}
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "attribute_ordering",
      "note": "Attributes are not in alphabetical order",
      "code": 31,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 8,
              "column": 3
            },
            "to": {
              "line": 8,
              "column": 11
            }
          },
          "message": "`bar` is out of alphabetical order",
          "suggestion": {
            "at": {
              "from": {
                "line": 1,
                "column": 1
              },
              "to": {
                "line": 9,
                "column": 2
              }
            },
            "fix": "{\n  bar = 2;\n\n  foo = 1;\n  kernelModules = [\n    \"a\"\n    \"b\"\n  ];\n}"
          }
        }
      ]
    },
    {
      "name": "array_spacing",
      "note": "Multiline array is not separated by blank lines",
      "code": 33,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 8,
              "column": 3
            },
            "to": {
              "line": 8,
              "column": 11
            }
          },
          "message": "a blank line should follow the multiline array above",
          "suggestion": {
            "at": {
              "from": {
                "line": 1,
                "column": 1
              },
              "to": {
                "line": 9,
                "column": 2
              }
            },
            "fix": "{\n  foo = 1;\n\n  kernelModules = [\n    \"a\"\n    \"b\"\n  ];\n\n  bar = 2;\n}"
          }
        }
      ]
    }
  ]
}
