bin/tests/snapshots/array_spacing__b206c4ae64edf39656f093b935b8602d_fix.snap
---
source: bin/tests/array_spacing.rs
assertion_line: 7
---
{
  foo = 1;
  kernelModules = [ "a" ];
  bar = 2;
}
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,5 +1,5 @@
 {
+  bar = 2;
   foo = 1;
   kernelModules = [ "a" ];
-  bar = 2;
 }
