bin/tests/snapshots/array_spacing__b206c4ae64edf39656f093b935b8602d_lint_errfmt.snap
---
source: bin/tests/array_spacing.rs
assertion_line: 7
---
{
  foo = 1;
  kernelModules = [ "a" ];
  bar = 2;
}
---
<temp_file_path>>4:3:W:31:[attribute_ordering] `bar` is out of alphabetical order
