bin/tests/snapshots/array_spacing__b206c4ae64edf39656f093b935b8602d_lint_json.snap
---
source: bin/tests/array_spacing.rs
assertion_line: 7
---
{
  foo = 1;
  kernelModules = [ "a" ];
  bar = 2;
}
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "attribute_ordering",
      "note": "Attributes are not in alphabetical order",
      "code": 31,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 4,
              "column": 3
            },
            "to": {
              "line": 4,
              "column": 11
            }
          },
          "message": "`bar` is out of alphabetical order",
          "suggestion": {
            "at": {
              "from": {
                "line": 1,
                "column": 1
              },
              "to": {
                "line": 5,
                "column": 2
              }
            },
            "fix": "{\n  bar = 2;\n  foo = 1;\n  kernelModules = [ \"a\" ];\n}"
          }
        }
      ]
    }
  ]
}
