bin/tests/snapshots/array_spacing__b206c4ae64edf39656f093b935b8602d_lint_stderr.snap
---
source: bin/tests/array_spacing.rs
assertion_line: 7
---
{
  foo = 1;
  kernelModules = [ "a" ];
  bar = 2;
}
---
[attribute_ordering] Warning: Attributes are not in alphabetical order
   ╭─[ <temp_file_path>:4:3 ]
   │
 4 │   bar = 2;
   │   ────┬───  
   │       ╰───── bar is out of alphabetical order
───╯
